tests/bad_programs/type_errors/undecl_fun.nc
int main() {
    funfun();
    return 0;
}
